--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,3 @@
-<!--table>
-    <tr>
-        <td>Topic: </td>
-        <td><input [(ngModel)]="topicname" type="text" /></td>
-        <td><button type="button" (click)="subscribeNewTopic()">Subscribe Topic</button></td>
-    </tr>
-    <tr>
-        <td>Message: </td>
-        <td><input [(ngModel)]="msg" type="text" /></td>
-        <td><button type="button" (click)="sendmsg()">Send</button></td>
-    </tr>
-    <tr>
-        <td></td>
-        <td>&nbsp;&nbsp;<button type="button" (click)="clear()">Clear Log</button></td>
-        <td></td>
-    </tr>
-</table>
-<br /><br />
-<div #msglog>
-</div-->
 <header>
 	<nav class="navbar navbar-expand-md navbar-dark fixed-top bar_nav_opa">
 		<a class="navbar-brand d-flex" href="#">
@@ -35,7 +15,7 @@
             <img src="assets/img/ico_cascada_iq.svg" width="42" >
         </div>
         <div class="vl"></div>
-        <div class="text_device align-self-center flex-fill">Entrada</div>
+        <div class="text_device align-self-center flex-fill">Casa</div>
     </div>
     <form [formGroup]="controlForm">
         <div class="box2">
@@ -58,7 +38,7 @@
                 </div>
             </div>
             <div class="row pr-3 pl-3">
-                <div class="text_device align-self-center flex-fill">Aux</div>
+                <div class="text_device align-self-center flex-fill">Habitacion</div>
                 <div class="align-self-end">
                     <label class="switch d-flex align-items-end">
                         <input formControlName="salida14" type="checkbox">
@@ -66,8 +46,125 @@
                     </label>
                 </div>
             </div>
-            <button type="button" class="button_sign pt-2 m-2 btn-primary d-flex align-items-center btn-lg" (click)="sendmsg('salida11')">Entrada</button>
-            <button type="button" class="button_sign pt-2 m-2 btn-primary d-flex align-items-center btn-lg" (click)="sendmsg('salida10')">Hall</button>
+            <div class="row pr-3 pl-3">
+                <div class="text_device align-self-center flex-fill">Salon</div>
+                <div class="align-self-end">
+                    <label class="switch d-flex align-items-end">
+                        <input formControlName="salida15" type="checkbox">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+            </div>
+            <div class="row pr-3 pl-3">
+                <div class="text_device align-self-center flex-fill">Buhardilla Hab. 1</div>
+                <div class="align-self-end">
+                    <label class="switch d-flex align-items-end">
+                        <input formControlName="salida16" type="checkbox">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+            </div>
+            <div class="row pr-3 pl-3">
+                <div class="text_device align-self-center flex-fill">Subir Persiana Hab.</div>
+                <div class="align-self-end">
+                    <label class="switch d-flex align-items-end">
+                        <input formControlName="salida1" type="checkbox">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+            </div>
+            <div class="row pr-3 pl-3">
+                <div class="text_device align-self-center flex-fill">Bajar Persiana Hab.</div>
+                <div class="align-self-end">
+                    <label class="switch d-flex align-items-end">
+                        <input formControlName="salida2" type="checkbox">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+            </div>
+            <div class="row pr-3 pl-3">
+                <div class="text_device align-self-center flex-fill">Buhardilla Pasillo</div>
+                <div class="align-self-end">
+                    <label class="switch d-flex align-items-end">
+                        <input formControlName="salida3" type="checkbox">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+            </div>
+            <div class="row pr-3 pl-3">
+                <div class="text_device align-self-center flex-fill">Colector Pl. Baja</div>
+                <div class="align-self-end">
+                    <label class="switch d-flex align-items-end">
+                        <input formControlName="salida4" type="checkbox">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+            </div>
+            <div class="row pr-3 pl-3">
+                <div class="text_device align-self-center flex-fill">Buhardilla Baño</div>
+                <div class="align-self-end">
+                    <label class="switch d-flex align-items-end">
+                        <input formControlName="salida5" type="checkbox">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+            </div>
+            <div class="row pr-3 pl-3">
+                <div class="text_device align-self-center flex-fill">Buhardilla Hab. 2</div>
+                <div class="align-self-end">
+                    <label class="switch d-flex align-items-end">
+                        <input formControlName="salida6" type="checkbox">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+            </div>
+            <div class="row pr-3 pl-3">
+                <div class="text_device align-self-center flex-fill">Garaje</div>
+                <div class="align-self-end">
+                    <label class="switch d-flex align-items-end">
+                        <input formControlName="salida7" type="checkbox">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+            </div>
+            <div class="row pr-3 pl-3">
+                <div class="text_device align-self-center flex-fill">Cocina</div>
+                <div class="align-self-end">
+                    <label class="switch d-flex align-items-end">
+                        <input formControlName="salida8" type="checkbox">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+            </div>
+            <div class="row pr-3 pl-3">
+                <div class="text_device align-self-center flex-fill">Escalera</div>
+                <div class="align-self-end">
+                    <label class="switch d-flex align-items-end">
+                        <input formControlName="salida9" type="checkbox">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+            </div>
+            <div class="row pr-3 pl-3">
+                <div class="text_device align-self-center flex-fill">Entrada</div>
+                <div class="align-self-end">
+                    <label class="switch d-flex align-items-end">
+                        <input formControlName="salida10" type="checkbox">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+            </div>
+            <div class="row pr-3 pl-3">
+                <div class="text_device align-self-center flex-fill">Hall</div>
+                <div class="align-self-end">
+                    <label class="switch d-flex align-items-end">
+                        <input formControlName="salida11" type="checkbox">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+            </div>
+            <button type="button" class="button_sign pt-2 m-2 btn-primary d-flex align-items-center btn-lg" (click)="sendmsg('salida11')">Hall</button>
+            <button type="button" class="button_sign pt-2 m-2 btn-primary d-flex align-items-center btn-lg" (click)="sendmsg('salida10')">Entrada</button>
             <button type="button" class="button_sign pt-2 m-2 btn-primary d-flex align-items-center btn-lg" (click)="sendmsg('salida9')">Escalera</button>
         </div>
     </form>
