--- a/src/assets/css/iQ_pool.css
+++ b/src/assets/css/iQ_pool.css
@@ -103,12 +103,12 @@
 .dropdown_all {
   font-family: 'Asap', arial;
   font-weight: bold;
-  font-size: 14px;
-  text-align: left;
+  font-size: 18px;
+  text-align: center;
   color: white;
   background-color: #0060AB;
   width: 130px;
-  height: 35px;
+  height: auto;
 }
 
 .dropdown_item {
@@ -467,13 +467,15 @@ border-radius: 10px 10px 10px 10px;
 .text_program_2 {
   width: auto;
   height: 23px;
-  color: #1347d4e5;
+  /*color: #1347d4e5;*/
+  color: whitesmoke;
   /*color: #cbc72d;*/
   text-align: center;
   display: block;
   font-family: 'Asap', arial;
   font-weight: bold;
   font-size: 18px;
+  padding-right: 10px;
   /*margin-top: 10px;*/
 }
 
@@ -481,7 +483,8 @@ border-radius: 10px 10px 10px 10px;
   width:auto;
   border: 0;
   /*border-top: 1px solid rgba(0, 0, 0, 0.1);*/
-  border-top: 1px solid #333;
+  /*border-top: 1px solid #333;*/
+  border-top: 1px solid white;
   margin-top: 10px; 
   margin-bottom: 10px;
   margin-left: 5px;
@@ -532,7 +535,7 @@ border-radius: 10px 10px 10px 10px;
 
 @supports(filter: invert(100%)){
   /*body{background:#111217;}*/
-  #potencia{   
+  #invert{   
   filter: invert(100%);
   }
 }
@@ -584,8 +587,9 @@ border-radius: 10px 10px 10px 10px;
 }
 
 .tarjeta {
-  background-color: transparent;
-  width: 800px;  
+  background-color: #33353bf1;
+  /*width: 800px;*/
+  width: auto;
   height: auto;
   margin-top: 15px;
   /*font-size: 24px;*/
@@ -731,22 +735,26 @@ border-radius: 10px 10px 10px 10px;
   text-decoration-color: #333;
   font-size: 20px;
   margin: auto;
-  color: #333;
+  /*color: #333;*/
+  color: white;
   padding-left: 20px;
   /*margin-right: 20px;
   margin-top: 6px;*/
 }
 
 .text_device_2 {
-  /*width: 145px;*/
+  width: auto;
   font-family: 'Asap', arial;
-  font-weight: bold;
+  /*font-weight: bold;*/
   text-decoration-color: #212121;
   font-size: 18px;
-  margin: auto;
-  color: #333;
+  /*margin: auto;*/
+  /*color: #333;*/
+  color: white;
   /*margin-right: 20px;
   margin-top: 6px;*/
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .switch {
@@ -852,8 +860,10 @@ input:checked + .slider:before {
 }
 
 .dropdown-menu.show {
-  background-color: #0060AB;
+  background-color: white;
   border-radius: 10px;
+  color: #000000;
+  font-size: 20px;
 }
 
 .text_dropdown {
